# Zith-Studio

./: CMakeLists.txt  main.cpp
editor/: MainWindow.cpp  MainWindow.h  resources.qrc
